--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,4 +18,27 @@
   .gr-text {
     @apply bg-gradient-to-t from-gray-300 to-zinc-300 bg-clip-text text-transparent;
   }
+
+  .clr-gr-text {
+    @apply bg-gradient-to-tr from-indigo-800 to-violet-500 bg-clip-text text-transparent
+  }
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: linear-gradient(to bottom, #18181b, #09090b);
+  border-radius: 100vh;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(to top right, #3730a3, #8b5cf6);
+  border-radius: 100vh;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(to top right, #4f46e5, #a78bfa);
 }
